tests/ui/typeck/qualified-path-params.stderr
error[E0223]: ambiguous associated type
  --> $DIR/qualified-path-params.rs:18:10
   |
LL | type A = <S as Tr>::A::f<u8>;
   |          ^^^^^^^^^^^^^^^^^^^
   |
help: if there were a trait named `Example` with associated type `f` implemented for `<S as Tr>::A`, you could use the fully-qualified path
   |
LL - type A = <S as Tr>::A::f<u8>;
LL + type A = <<S as Tr>::A as Example>::f<u8>;
   |

error[E0533]: expected unit struct, unit variant or constant, found associated function `<<S as Tr>::A>::f<u8>`
  --> $DIR/qualified-path-params.rs:23:9
   |
LL |         <S as Tr>::A::f::<u8> => {}
   |         ^^^^^^^^^^^^^^^^^^^^^ not a unit struct, unit variant or constant

error[E0029]: only `char` and numeric types are allowed in range patterns
  --> $DIR/qualified-path-params.rs:25:13
   |
LL |         0..=<S as Tr>::A::f::<u8> => {}
   |         -   ^^^^^^^^^^^^^^^^^^^^^ this is of type `fn() {S::f::<u8>}` but it should be `char` or numeric
   |         |
   |         this is of type `{integer}`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0029, E0223, E0533.
For more information about an error, try `rustc --explain E0029`.
